远程免密登陆

--- a/免密登陆.md
+++ b/免密登陆.md
@@ -7,8 +7,8 @@
 ```
 ssh-keygen -t rsa
 ```
-默认一路回车即可,生成rsa密钥对(即私钥.ssh/id_rsa和公钥.ssh/id_rsa.pub文件)。
-将生成的公钥.ssh/id_rsa.pub发送到目标机器192.168.1.101的~/.ssh/authorized_keys中，使用如下命令(并输入目标机器目标帐户的密码):
+默认一路回车即可,生成rsa密钥对(即私钥.ssh/id_rsa和公钥.ssh/id_rsa.pub文件)。
+将生成的公钥.ssh/id_rsa.pub发送到目标机器192.168.1.101的~/.ssh/authorized_keys中，使用如下命令(并输入目标机器目标帐户的密码):
 ```
 ssh-copy-id -i ~/.ssh/id_rsa.pub work@192.168.1.101
 ```
